[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fullmute"
version = "1.0.0"
description = "Mass web scanner with technology detection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.0",
    "PyYAML>=6.0",
    "aiosqlite>=0.19.0",
    "rich>=13.7.0",
    "fake-useragent>=1.4.0",
    "psutil>=5.9.0",
    "sqlalchemy>=2.0.0",
    "click>=8.1.0"
]

[project.scripts]
fullmute = "fullmute.main:entrypoint"
